[gd_scene load_steps=21 format=3 uid="uid://b2l33xuhgbn30"]

[ext_resource type="Texture2D" uid="uid://crk8u4q5h81a7" path="res://global/particles/object_atlas.png" id="1"]
[ext_resource type="Script" path="res://scenes/bean/bean_dropped.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://khqdwynnq6lm" path="res://global/particles/fx_bubble.png" id="3_m4l2t"]

[sub_resource type="CircleShape2D" id="1"]
radius = 24.0

[sub_resource type="RectangleShape2D" id="2"]
size = Vector2(32, 32)

[sub_resource type="Animation" id="3"]
resource_name = "Idle"
length = 2.4

[sub_resource type="Animation" id="6"]
resource_name = "Inactive"

[sub_resource type="Animation" id="4"]
length = 0.001

[sub_resource type="Animation" id="11"]
resource_name = "Spawn"
length = 0.5

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6vrea"]
_data = {
"Idle": SubResource("3"),
"Inactive": SubResource("6"),
"RESET": SubResource("4"),
"Spawn": SubResource("11")
}

[sub_resource type="AnimationNodeAnimation" id="8"]
animation = &"Inactive"

[sub_resource type="AnimationNodeAnimation" id="16"]
animation = &"Spawn"

[sub_resource type="AnimationNodeAnimation" id="9"]
animation = &"Idle"

[sub_resource type="AnimationNodeBlend2" id="17"]

[sub_resource type="AnimationNodeAdd2" id="15"]
filters = ["Sprite2D:modulate:a", "Sprite2D:modulate:b", "Sprite2D:modulate:g", "Sprite2D:modulate:r", "Sprite2D:position:x", "Sprite2D:position:y", "Sprite2D:rotation_degrees"]

[sub_resource type="AnimationNodeTimeSeek" id="18"]

[sub_resource type="AnimationNodeBlendTree" id="10"]
graph_offset = Vector2(-640, 36.75)
nodes/Animation/node = SubResource("9")
nodes/Animation/position = Vector2(-400, 100)
"nodes/Animation 2/node" = SubResource("8")
"nodes/Animation 2/position" = Vector2(-400, 240)
"nodes/Animation 3/node" = SubResource("16")
"nodes/Animation 3/position" = Vector2(-420, 420)
nodes/Blend2/node = SubResource("17")
nodes/Blend2/position = Vector2(40, 200)
nodes/inactive/node = SubResource("15")
nodes/inactive/position = Vector2(-160, 100)
nodes/spawn/node = SubResource("18")
nodes/spawn/position = Vector2(-200, 400)
node_connections = [&"output", 0, &"Blend2", &"Blend2", 0, &"inactive", &"Blend2", 1, &"spawn", &"inactive", 0, &"Animation", &"inactive", 1, &"Animation 2", &"spawn", 0, &"Animation 3"]

[sub_resource type="Curve" id="Curve_ounca"]
min_value = 1.0
max_value = 2.0
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 1.50909), 1.4, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_jqtg0"]
colors = PackedColorArray(1, 1, 1, 0.709804, 1, 1, 1, 0)

[sub_resource type="CircleShape2D" id="5"]
radius = 40.0

[node name="BeanDrop" type="CharacterBody2D"]
collision_layer = 0
collision_mask = 4
script = ExtResource("2")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("1")
hframes = 6
vframes = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("1")

[node name="RefShape" type="CollisionShape2D" parent="."]
shape = SubResource("2")
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
libraries = {
"": SubResource("AnimationLibrary_6vrea")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("10")
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/Blend2/blend_amount = 0.5
parameters/inactive/add_amount = 1.0
parameters/spawn/seek_request = -1.0

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="CollectParticles" type="CPUParticles2D" parent="."]
unique_name_in_owner = true
z_index = 1
emitting = false
amount = 6
lifetime = 0.4
one_shot = true
explosiveness = 1.0
draw_order = 1
texture = ExtResource("3_m4l2t")
emission_shape = 3
emission_rect_extents = Vector2(16, 16)
spread = 90.0
gravity = Vector2(0, -10)
scale_amount_min = 0.1
scale_amount_max = 0.2
scale_amount_curve = SubResource("Curve_ounca")
color = Color(0, 1, 0, 1)
color_ramp = SubResource("Gradient_jqtg0")

[node name="PickupBox" type="Area2D" parent="."]
collision_layer = 0
input_pickable = false
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupBox"]
shape = SubResource("5")

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="PickupBox" to="." method="_on_PickupBox_body_entered"]
